--- a/simulator.html
+++ b/simulator.html
@@ -216,18 +216,20 @@
             <div class="mb-6">
                 <label class="block text-sm font-semibold text-gray-700 mb-3">Search for university or program</label>
                 <div class="relative">
-                    <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none z-10">
-                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                        </svg>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <div class="pl-4 pr-3 flex items-center pointer-events-none">
+                            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                            </svg>
+                        </div>
+                        <input type="text" id="intelligent-search"
+                            class="flex-1 py-4 pr-4 text-base border-0 focus:outline-none focus:ring-0 bg-transparent"
+                            placeholder="Try 'Harvard MBA' or 'IE Business School'..." autocomplete="off"
+                            oninput="intelligentSearch(this.value)">
                     </div>
-                    <input type="text" id="intelligent-search"
-                        class="w-full pl-14 pr-4 py-4 text-base border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all"
-                        placeholder="Try 'Harvard MBA' or 'IE Business School'..." autocomplete="off"
-                        oninput="intelligentSearch(this.value)">
                     <div id="search-results"
-                        class="max-h-96 overflow-y-auto border border-gray-200 border-t-0 absolute w-full bg-white/95 backdrop-blur-md z-10 rounded-b-lg shadow-lg hidden">
+                        class="max-h-96 overflow-y-auto border border-gray-200 border-t-0 absolute w-full bg-white/95 backdrop-blur-md z-10 rounded-b-lg shadow-lg hidden mt-1">
                     </div>
                 </div>
                 <p class="text-xs text-gray-500 mt-2">Search by university name, program, or both</p>
