Fix dollar icon overlapping placeholders in Step 2 and Step 3 using flexbox structure

--- a/simulator.html
+++ b/simulator.html
@@ -831,10 +831,10 @@
                         Current Savings
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-savings" placeholder="0"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">Liquid assets you have available now</p>
                 </div>
@@ -843,10 +843,10 @@
                         Family Support
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-family" placeholder="0"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">Financial support from family members</p>
                 </div>
@@ -855,10 +855,10 @@
                         Scholarships & Grants
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-scholarships" placeholder="0"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">Confirmed scholarships or grants</p>
                 </div>
@@ -867,10 +867,10 @@
                         Loans
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-loans" placeholder="0"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">Student loans you can access</p>
                 </div>
@@ -891,10 +891,10 @@
                         Visa & Immigration Fees
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-visa" placeholder="500"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">Typical range: $300-$800</p>
                 </div>
@@ -903,10 +903,10 @@
                         Health Insurance
                         <span class="text-gray-400 font-normal ml-1">(Annual, USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-insurance" placeholder="2000"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">If not included in tuition</p>
                 </div>
@@ -915,10 +915,10 @@
                         Accommodation Deposit
                         <span class="text-gray-400 font-normal ml-1">(USD)</span>
                     </label>
-                    <div class="relative">
-                        <span class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 font-medium">$</span>
+                    <div class="flex items-center border-2 border-gray-200 rounded-lg focus-within:border-indigo-500 focus-within:ring-4 focus-within:ring-indigo-100 transition-all bg-white">
+                        <span class="pl-4 pr-2 text-gray-500 font-medium">$</span>
                         <input type="number" id="input-deposit" placeholder="1000"
-                            class="w-full pl-8 pr-4 py-3 border-2 border-gray-200 rounded-lg focus:border-indigo-500 focus:ring-4 focus:ring-indigo-100 transition-all" />
+                            class="flex-1 py-3 pr-4 border-0 focus:outline-none focus:ring-0 bg-transparent" />
                     </div>
                     <p class="text-xs text-gray-500 mt-1">First/last month rent</p>
                 </div>
