--- a/brand-guide.html
+++ b/brand-guide.html
@@ -818,40 +818,63 @@ animate();
         <section id="typography" class="section">
             <h2 class="section-title">Typography</h2>
             <p class="section-description">
-                We use Inter for all text. It's optimized for screens and provides excellent readability.
+                We use <strong>Plus Jakarta Sans</strong> for all <code>h1</code> headings to create a distinctive, modern look. 
+                <strong>Inter</strong> is used for all other text (body, paragraphs, buttons, etc.) as it's optimized for screens 
+                and provides excellent readability.
             </p>
+
+            <!-- Font Stack Info -->
+            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-xl border-2 border-indigo-200 p-6 mb-6">
+                <h3 class="text-lg font-bold text-gray-900 mb-4">Font Stack</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <h4 class="font-semibold text-gray-900 mb-2">Headings (h1)</h4>
+                        <p class="text-sm text-gray-700 mb-2">Plus Jakarta Sans</p>
+                        <div class="code-block" style="font-size: 0.75rem; padding: 0.75rem;">
+                            font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="font-semibold text-gray-900 mb-2">Body & All Other Text</h4>
+                        <p class="text-sm text-gray-700 mb-2">Inter</p>
+                        <div class="code-block" style="font-size: 0.75rem; padding: 0.75rem;">
+                            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="bg-white rounded-2xl border-2 border-gray-200 p-8 mb-6">
                 <h3 class="text-xl font-bold text-gray-900 mb-6">Type Scale</h3>
 
                 <div class="type-sample">
                     <h1 class="text-6xl font-bold text-gray-900 mb-2">Heading 1</h1>
-                    <p class="text-sm text-gray-500">text-6xl / 60px / font-bold / 900</p>
+                    <p class="text-sm text-gray-500">text-6xl / 60px / font-bold / 900 / <strong>Plus Jakarta Sans</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <h2 class="text-5xl font-bold text-gray-900 mb-2">Heading 2</h2>
-                    <p class="text-sm text-gray-500">text-5xl / 48px / font-bold / 900</p>
+                    <p class="text-sm text-gray-500">text-5xl / 48px / font-bold / 900 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <h3 class="text-4xl font-bold text-gray-900 mb-2">Heading 3</h3>
-                    <p class="text-sm text-gray-500">text-4xl / 36px / font-bold / 800</p>
+                    <p class="text-sm text-gray-500">text-4xl / 36px / font-bold / 800 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <h4 class="text-3xl font-bold text-gray-900 mb-2">Heading 4</h4>
-                    <p class="text-sm text-gray-500">text-3xl / 30px / font-bold / 700</p>
+                    <p class="text-sm text-gray-500">text-3xl / 30px / font-bold / 700 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <h5 class="text-2xl font-semibold text-gray-900 mb-2">Heading 5</h5>
-                    <p class="text-sm text-gray-500">text-2xl / 24px / font-semibold / 600</p>
+                    <p class="text-sm text-gray-500">text-2xl / 24px / font-semibold / 600 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <h6 class="text-xl font-semibold text-gray-900 mb-2">Heading 6</h6>
-                    <p class="text-sm text-gray-500">text-xl / 20px / font-semibold / 600</p>
+                    <p class="text-sm text-gray-500">text-xl / 20px / font-semibold / 600 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
@@ -859,24 +882,32 @@ animate();
                         Body text - Regular paragraph with proper line height for optimal readability.
                         The quick brown fox jumps over the lazy dog.
                     </p>
-                    <p class="text-sm text-gray-500">text-base / 16px / font-normal / 400 / line-height: 1.75</p>
+                    <p class="text-sm text-gray-500">text-base / 16px / font-normal / 400 / line-height: 1.75 / <strong>Inter</strong></p>
                 </div>
 
                 <div class="type-sample">
                     <p class="text-sm text-gray-600 mb-2">Small text for captions and helper text</p>
-                    <p class="text-sm text-gray-500">text-sm / 14px / font-normal / 400</p>
+                    <p class="text-sm text-gray-500">text-sm / 14px / font-normal / 400 / <strong>Inter</strong></p>
                 </div>
 
                 <div>
                     <p class="text-xs text-gray-500 mb-2">Extra small text for labels and metadata</p>
-                    <p class="text-sm text-gray-500">text-xs / 12px / font-normal / 400</p>
+                    <p class="text-sm text-gray-500">text-xs / 12px / font-normal / 400 / <strong>Inter</strong></p>
                 </div>
             </div>
 
             <div class="bg-gray-900 rounded-xl p-6">
-                <p class="text-xs text-gray-400 mb-2">CSS</p>
+                <p class="text-xs text-gray-400 mb-2">CSS Implementation</p>
                 <div class="code-block">
-                    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+/* Headings (h1) - Plus Jakarta Sans */
+h1 {
+    font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+}
+
+/* All other text - Inter */
+* {
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+}
                 </div>
             </div>
         </section>
