--- a/pricing.html
+++ b/pricing.html
@@ -176,13 +176,15 @@
             <!-- Pro Plan -->
             <div
                 class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-5 flex flex-col relative overflow-hidden">
-                <div
-                    class="absolute top-4 right-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full">
-                    POPULAR
-                </div>
                 <div class="flex-grow text-white">
                     <div class="mb-6">
-                        <h2 class="text-2xl font-bold mb-2">Everything you need for $60. Forever.</h2>
+                        <div class="flex items-start justify-between gap-4 mb-2">
+                            <h2 class="text-2xl font-bold flex-1">Everything you need for $60. Forever.</h2>
+                            <div
+                                class="bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full flex-shrink-0 whitespace-nowrap">
+                                POPULAR
+                            </div>
+                        </div>
                         <div class="flex items-baseline">
                             <span class="text-5xl font-bold">$60</span>
                             <span class="text-lg text-indigo-200 ml-2">one-time</span>
