--- a/pricing.html
+++ b/pricing.html
@@ -106,9 +106,9 @@
         </div>
 
         <!-- Pricing Table -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-5xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-5xl mx-auto items-stretch">
             <!-- Free Plan -->
-            <div class="card-hover bg-white rounded-2xl border-2 border-gray-200 p-5 flex flex-col">
+            <div class="card-hover bg-white rounded-lg border border-gray-200 p-5 flex flex-col">
                 <div class="flex-grow">
                     <div class="mb-6">
                         <h2 class="text-2xl font-bold text-gray-900 mb-2">Free Plan</h2>
@@ -168,14 +168,14 @@
                         </li>
                     </ul>
                 </div>
-                <div class="bg-gray-50 border border-gray-200 rounded-xl py-4 text-center font-semibold text-gray-700">
+                <div class="bg-gray-50 border border-gray-200 rounded-lg py-3 text-center font-semibold text-gray-700">
                     Your Current Plan
                 </div>
             </div>
 
             <!-- Pro Plan -->
             <div
-                class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-5 flex flex-col relative overflow-hidden">
+                class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-lg border border-indigo-500 p-5 flex flex-col relative overflow-hidden">
                 <div class="flex-grow text-white">
                     <div class="mb-6">
                         <div class="flex items-start justify-between gap-4 mb-2">
@@ -247,15 +247,15 @@
                     </ul>
                 </div>
                 <a href="signupmodal.html"
-                    class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
+                    class="bg-white text-indigo-600 rounded-lg py-3 px-6 text-center font-semibold hover:bg-indigo-50 transition-all block">
                     Get Lifetime Access Now →
                 </a>
             </div>
         </div>
 
         <!-- Social Proof Section -->
-        <div class="max-w-5xl mx-auto mt-16 mb-16">
-            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-5">
+        <div class="max-w-5xl mx-auto mt-8 mb-8">
+            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-lg border border-indigo-200 p-5">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
                     <div class="text-center">
                         <div class="text-4xl font-bold text-indigo-600 mb-2">1,247</div>
@@ -272,11 +272,11 @@
                 </div>
 
                 <!-- Testimonial -->
-                <div class="bg-white rounded-xl p-6 shadow-sm">
+                <div class="bg-white rounded-lg border border-gray-200 p-5">
                     <div class="flex items-start space-x-4">
-                        <div
-                            class="w-16 h-16 rounded-full bg-gradient-to-br from-indigo-600 to-purple-600 flex items-center justify-center text-white font-bold text-xl flex-shrink-0">
-                            SR
+                        <div class="w-16 h-16 rounded-full overflow-hidden flex-shrink-0 ring-4 ring-white shadow-lg">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=200&h=200&fit=crop&crop=faces"
+                                alt="Sofia R." class="w-full h-full object-cover">
                         </div>
                         <div>
                             <p class="text-gray-700 italic mb-3">"MasterPlan helped me find a program that was $12,000
@@ -291,23 +291,23 @@
         </div>
 
         <!-- FAQ Section -->
-        <div class="max-w-3xl mx-auto mt-20">
-            <h2 class="text-3xl font-bold text-center text-gray-900 mb-6">Frequently Asked Questions</h2>
-            <div class="space-y-6">
-                <div class="bg-white rounded-xl border border-gray-200 p-6">
-                    <h3 class="font-bold text-gray-900 mb-2">What's included in the Pro plan?</h3>
-                    <p class="text-gray-600">Pro includes everything in Free, plus 24-month cash flow projections,
+        <div class="max-w-3xl mx-auto mt-8">
+            <h2 class="text-2xl font-bold text-center text-gray-900 mb-6">Frequently Asked Questions</h2>
+            <div class="space-y-4">
+                <div class="bg-white rounded-lg border border-gray-200 p-5">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-2">What's included in the Pro plan?</h3>
+                    <p class="text-sm text-gray-600">Pro includes everything in Free, plus 24-month cash flow projections,
                         unlimited program comparisons, dynamic scenario planning, and the ability to save and edit
                         unlimited plans.</p>
                 </div>
-                <div class="bg-white rounded-xl border border-gray-200 p-6">
-                    <h3 class="font-bold text-gray-900 mb-2">Is the $60 payment really one-time?</h3>
-                    <p class="text-gray-600">Yes! The $60 payment gives you full access to all Pro features for 2 years.
+                <div class="bg-white rounded-lg border border-gray-200 p-5">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-2">Is the $60 payment really one-time?</h3>
+                    <p class="text-sm text-gray-600">Yes! The $60 payment gives you full access to all Pro features for 2 years.
                         No recurring charges, no surprises.</p>
                 </div>
-                <div class="bg-white rounded-xl border border-gray-200 p-6">
-                    <h3 class="font-bold text-gray-900 mb-2">Can I upgrade later?</h3>
-                    <p class="text-gray-600">Absolutely! You can start with the Free plan and upgrade to Pro anytime.
+                <div class="bg-white rounded-lg border border-gray-200 p-5">
+                    <h3 class="text-lg font-semibold text-gray-900 mb-2">Can I upgrade later?</h3>
+                    <p class="text-sm text-gray-600">Absolutely! You can start with the Free plan and upgrade to Pro anytime.
                         Your data will be preserved when you upgrade.</p>
                 </div>
             </div>
