--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </section>
 
     <!-- Success Stories Section -->
-    <section class="bg-white py-20">
+    <section class="bg-white pt-8 pb-20">
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-4">See Where Our Planners Are Now
             </h2>
