Fix: Replace static user name with clickable dropdown menu for logout in results.html

--- a/results.html
+++ b/results.html
@@ -199,12 +199,8 @@
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
                     <a href="pricing.html"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
-                    <div class="flex items-center space-x-3">
-                        <div
-                            class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
-                            SO
-                        </div>
-                        <span class="font-semibold text-gray-900" id="nav-user-name">User</span>
+                    <div id="user-profile-section" class="flex items-center space-x-3">
+                        <!-- User profile will be populated by auth-state.js -->
                     </div>
                 </div>
             </div>
@@ -1113,20 +1109,7 @@
             }
         });
     </script>
-    <script type="module">
-        import { auth, onAuthStateChanged } from './js/firebase-config.js';
-
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
-                const userName = user.displayName || 'User';
-                const firstName = userName.split(' ')[0];
-                const navUserName = document.getElementById('nav-user-name');
-                if (navUserName) {
-                    navUserName.textContent = firstName;
-                }
-            }
-        });
-    </script>
+    <script type="module" src="./js/auth-state.js"></script>
     <script>
         function toggleSidebar() {
             const sidebar = document.getElementById('sidebar-controls');
