--- a/results.html
+++ b/results.html
@@ -211,7 +211,7 @@
     <div class="max-w-7xl mx-auto px-6 py-8">
         <div class="lg:grid lg:grid-cols-4 gap-4">
             <!-- Sidebar Controls -->
-            <div class="lg:col-span-1">
+            <div id="sidebar-column" class="lg:col-span-1">
                 <button id="sidebar-toggle"
                     class="mb-4 flex items-center gap-2 text-gray-600 hover:text-indigo-600 font-medium transition-colors"
                     onclick="toggleSidebar()">
@@ -1011,9 +1011,21 @@
 
             if (simType === 'single') {
                 // Ensure correct classes for single view (default)
-                document.getElementById('sidebar-controls').classList.remove('hidden-view');
-                document.getElementById('main-content-area').classList.remove('lg:col-span-4');
-                document.getElementById('main-content-area').classList.add('lg:col-span-3');
+                const sidebarColumn = document.getElementById('sidebar-column');
+                const sidebarControls = document.getElementById('sidebar-controls');
+                const mainContentArea = document.getElementById('main-content-area');
+
+                if (sidebarColumn) {
+                    sidebarColumn.classList.remove('hidden', 'lg:hidden');
+                }
+                if (sidebarControls) {
+                    sidebarControls.classList.remove('hidden-view');
+                }
+                if (mainContentArea) {
+                    mainContentArea.classList.remove('lg:col-span-4');
+                    mainContentArea.classList.add('lg:col-span-3');
+                }
+
                 document.getElementById('single-result-view').classList.remove('hidden-view');
 
                 const savingsFromUrl = parseFloat(params.get('savings')) || savingsA;
@@ -1065,8 +1077,21 @@
                 generateSimilarPrograms(nameA, tuitionA);
 
             } else {
-                document.getElementById('main-content-area').classList.add('lg:col-span-4');
-                document.getElementById('sidebar-controls').classList.add('hidden-view');
+                // Comparison mode: hide sidebar column completely and expand main content
+                const sidebarColumn = document.getElementById('sidebar-column');
+                const sidebarControls = document.getElementById('sidebar-controls');
+                const mainContentArea = document.getElementById('main-content-area');
+
+                if (sidebarColumn) {
+                    sidebarColumn.classList.add('hidden', 'lg:hidden');
+                }
+                if (sidebarControls) {
+                    sidebarControls.classList.add('hidden-view');
+                }
+                if (mainContentArea) {
+                    mainContentArea.classList.add('lg:col-span-4');
+                }
+
                 document.getElementById('compare-result-view').classList.remove('hidden-view');
 
                 const nameB = params.get('nameB') || 'MSc in Finance';
